gke/deploy_to_gke_example/back/deployment/infrastructure/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
  namespace: application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: haissamfawaz/neuraubackend:51c1638
        # volumeMounts:
        # - mountPath: "/scratch"
        #   name: scratch-volume
        ports:
        - containerPort: 3000
