gke/deploy_to_gke_example/back/deployment/infrastructure/manifest/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "backend-service"
  namespace: "application"
  labels:
    app: "backend"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  selector:
    app: "backend"
  type: "ClusterIP"
