gke/deploy_to_gke_example/back/deployment/infrastructure/manifest/network-policies-deny.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test
  namespace: application
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-neuraumed
